# autopilot_bridge

./: CMakeLists.txt  README.md  package.xml
msg/: AutoPilotMsg.msg  GeoPoint.msg  GeoPose.msg  GeoPoseWithCovariance.msg  Geodometry.msg  Heartbeat.msg  Rallypoint.msg  Status.msg  Waypoint.msg  WeatherData.msg
src/: MAVLinkBridge.py  mavbridge.py  mavbridge_acs.py  mavbridge_ap_msg_queue.py  mavbridge_core.py  mavbridge_file.py  mavbridge_fpr.py  mavbridge_param.py  mavbridge_slave.py  mavbridge_wp.py  mavlink.py
srv/: FenceGetAll.srv  FenceSetAll.srv  Param.srv  ParamGet.srv  ParamGetList.srv  ParamSet.srv  ParamSetList.srv  RallyGetAll.srv  RallySetAll.srv  ReqPrevNMsgs.srv  SlaveSetup.srv  TimedAction.srv  Version.srv  WPGetAll.srv  WPGetRange.srv  WPSetAll.srv
